--- a/esl_sqio.tex
+++ b/esl_sqio.tex
@@ -95,7 +95,7 @@ Finally, to clean up properly, a \ccode{ESL\_SQ} that was created is
 destroyed with \ccode{esl\_sq\_Destroy(sq)}, and a \ccode{ESL\_SQFILE}
 is closed with \ccode{esl\_sqfile\_Close()}.
 
-\subsection{Accessing information in the SQ object}
+\subsection{Accessing information in the ESL\_SQ object}
 
 The information in an \ccode{ESL\_SQ} object is meant to be accessed
 directly, so you need to know what it contains. The object is defined
