fixed bug w/ missing keyhash module: can't augment with a module that isn't there yet, duh.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@56 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -32,6 +32,7 @@
 
 \section{The easel (esl) module: error handling and other fundamentals}
 \input{../easel}
+
 \vspace*{\fill}
 \begin{quote}
 \emph{Only a complete outsider could ask your question. Are there
@@ -88,6 +89,14 @@ error?} \hspace{3em} -- Franz Kafka, in \emph{The Castle}
 \input{../esl_random}
 \subsection{Functions in the random (rnd) module}
 \input{autotext/esl_random_functions}
+
+\vspace*{\fill}
+\begin{quote}
+\emph{Nec Babylonios temptaris numeros.} \hspace{3em} -- Horace, Ode
+1.11. \\ 
+
+
+\end{quote}     
 
 \newpage
 \section{The regexp module: regular expression matching}
