Default configure now produces library version; to get standalone modules, ./configure --enable-modular.
Incorp'ed esl_minimizer module. Still needs .tex file though.  EVD
fitting is on its way.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@57 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -22,9 +22,10 @@
 \newpage
 \chapter{Introduction}
 \input{intro}
+
 \vspace*{\fill}
 \begin{quote}
-\emph{Lack of skill dictates economy of style.} \hspace{3em} -- Joey Ramone
+\hspace*{1em}\hfill \emph{Lack of skill dictates economy of style.} \hspace{1em} -- Joey Ramone
 \end{quote}     
 
 \newpage
@@ -40,7 +41,7 @@ control authorities? There are nothing but control authorities. Of
 course, their purpose is not to uncover errors in the ordinary meaning
 of the word, since errors do not occur and even when an error does in
 fact occur, as in your case, who can say conclusively that it is an
-error?} \hspace{3em} -- Franz Kafka, in \emph{The Castle}
+error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \end{quote}     
 
 \newpage
@@ -94,8 +95,6 @@ error?} \hspace{3em} -- Franz Kafka, in \emph{The Castle}
 \begin{quote}
 \emph{Nec Babylonios temptaris numeros.} \hspace{3em} -- Horace, Ode
 1.11. \\ 
-
-
 \end{quote}     
 
 \newpage
