--- a/esl_vectorops.tex
+++ b/esl_vectorops.tex
@@ -17,7 +17,9 @@ doubles; \ccode{esl\_vec\_ISet()} is for integers.
 \ccode{esl\_vec\_\{D,F,I\}Increment()}   & Add a scalar to all items in vector.\\
 \ccode{esl\_vec\_\{D,F,I\}Sum()}         & Return scalar sum of values in vector.\\
 \ccode{esl\_vec\_\{D,F,I\}Add()}         & Add vec2 to vec1.\\
+\ccode{esl\_vec\_\{D,F,I\}AddScaled()}   & Scale vec2 and add it to vec1.\\
 \ccode{esl\_vec\_\{D,F,I\}Copy()}        & Set vec1 to be same as vec2. \\
+\ccode{esl\_vec\_\{D,F,I\}Swap()}        & Swap vec1 and vec2. \\
 \ccode{esl\_vec\_\{D,F,I\}Dot()}         & Return dot product of two vectors.\\
 \ccode{esl\_vec\_\{D,F,I\}Max()}         & Return value of maximum element in vector.\\
 \ccode{esl\_vec\_\{D,F,I\}Min()}         & Return value of minimum element in vector.\\
