--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -1,4 +1,76 @@
+
+
+\begin{quote}
+ \emph{...using another person's software is sometimes treated like 
+ using their toothbrush.}\\
+\hspace*{1em}\hfill - Webb Miller \citep{Miller01}
+\end{quote}
+
+
+Easel is the C library that underlies bioinformatics software packages
+from the Eddy lab, including HMMER \citep{} and Infernal \citep{}, the
+software engines for the Pfam protein family database \citep{} and the
+Rfam RNA family database \citep{}.
+
+Easel results from years of accretion and gradual refactoring of a
+personal codebase for solving common problems encountered in writing
+bioinformatics applications, particularly in the area of sequence
+analysis.
+
+Easel is not intended to be an all-purpose solution nor a \emph{de
+facto} standard. Several general-purpose bioinformatics libraries are
+available that do aspire to such goals. The NCBI Toolkit \citep{} and
+the Ajax library in EMBOSS \citep{} are particularly comprehensive
+resources for C programming, and the BioPerl project is an admirably
+successful resource for Perl \citep{}.
+
+Rather, Easel is intended to maintain a body of work from my lab in a
+useful form that new people in the lab can adopt quickly, and that
+other software developers outside the lab might also benefit from. Its
+design follows from a golden rule, \emph{do unto other developers as
+you would have them do unto you}:
+
+\begin{description}
+\item[\textbf{Documentation.}]  Effort has been invested in practical
+documentation, including this Guide, tutorial examples to Easel APIs,
+and source-level comments.\footnote{Too often I've tried to obtain a
+routine and ended up unable to understand how to use it because of
+missing, incomplete, or obsolete documentation.}
+
+\item[\textbf{Modularity.}]  Easel is designed to minimize
+dependencies between its routines, to help you take individual files
+(or individual routines) for your use, without having to include the
+entire library. \footnote{Too often I've tried to obtain a routine and
+found it deeply entangled in a large third-party library. I can either
+package the whole library in my software distribution (cumbersome, and
+a potential maintainability headache in the long run), or I try to
+understand the code well enough to disentangle it. It usually seems
+easier to just rewrite it from scratch.}
+
+\item[\textbf{No license encumbrance.}]  Easel is freely available
+under a Creative Commons Attribution License. You can use it for
+anything you want, even commercial products, so long as you keep my
+copyright and license notice on the code. \footnote{Too often I've
+tried to reuse a routine and been blocked by someone's license
+terms. Even some open source licenses, such as the GNU General Public
+License (GPL), can impede right-minded developers who happen to use
+incompatible open-source licenses. The CC license just provides me
+some minimal legal ablative armor in case you like to sue people that
+give you stuff for free.}
+\end{description}
+
 \section{Overview of modules}
+
+Certain problems recur frequently in sequence analysis software. Each
+\ccode{.c} file in Easel contains one \emph{module} that deals with
+one such problem.
+
+Parsing the variety of different sequence file formats, for instance,
+is a pain. The \eslmod{sqio} module (which shares some remote lines of
+descent from Don Gilbert's classic ReadSeq package) can automatically
+parse many common unaligned sequence formats, and the \eslmod{msa}
+module can parse many common multiple alignment formats.
+
 \begin{tabular}{llll}\hline
 \textbf{Module} & \textbf{Description}       & \textbf{Requires} & \textbf{Augmentation(s)}\\\hline
   \multicolumn{4}{c}{\textbf{Core module}}\\
@@ -18,6 +90,7 @@ vectorops       & Vector operations                 & easel  & \\\hline
   \multicolumn{4}{c}{\textbf{Derived modules}}\\
 bioparse\_paml  & PAML rate matrix datafiles        & easel dmatrix parse & \\
 dirichlet       & Dirichlet densities               & easel vectorops  & fileparser, random \\ 
+minimizer       & Multidimensional optimization     & easel vectorops  & \\
 ratematrix      & Evolutionary rate matrices        & easel dmatrix vectorops & \\
 wuss            & RNA structure annotation          & easel stack    & \\\hline
   \multicolumn{4}{c}{\textbf{Optional library interfaces}}\\
