--- a/documentation/macros.tex
+++ b/documentation/macros.tex
@@ -12,6 +12,9 @@
 \newcommand{\cfunc}[1]{\texttt{#1}}
 \newcommand{\cfile}[1]{\texttt{#1}}
 
+\def\argmax{\mathop{\mathrm{argmax}}\limits}
+\def\argmin{\mathop{\mathrm{argmin}}\limits}
+
 \DefineVerbatimEnvironment{cchunk}{Verbatim}{fontsize=\scriptsize,xleftmargin=2.0\parindent}%
 
 % Description-like environment for documenting functions/APIs.
