Added the stats module, relocated some code into it. Documentation of gev, gumbel still in progress. Working on getting goodness-of-fit tests in histogram module.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@61 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -66,12 +66,6 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 
 
 
-\newpage
-\section{The evd module: extreme value (Gumbel) statistics}
-\input{../esl_evd}
-\subsection{Functions in the evd module}
-\input{autotext/esl_evd_functions}
-
 
 
 \newpage
@@ -87,6 +81,22 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \input{../esl_getopts}
 \subsection{Functions in the getopts module}
 \input{autotext/esl_getopts_functions}
+
+
+
+\newpage
+\section{The gev module: generalized extreme value statistics}
+\input{../esl_gev}
+\subsection{Functions in the gev module}
+\input{autotext/esl_gev_functions}
+
+
+\newpage
+\section{The gumbel module: Type I extreme value (Gumbel) statistics}
+\input{../esl_gumbel}
+\subsection{Functions in the gumbel module}
+\input{autotext/esl_gumbel_functions}
+
 
 
 
