Lots of work on new distributions.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@64 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_dirichlet.tex
+++ b/esl_dirichlet.tex
@@ -21,7 +21,8 @@ The API consists of the following functions:
 \ccode{esl\_dirichlet\_LogProbProbs()}      & $\log P( \mbox{prob vector} \mid \mbox{mixture Dirichlet}$.\\
 \ccode{esl\_dirichlet\_LogGamma()}          & $\log \Gamma(x)$.\\
    \multicolumn{2}{c}{\textbf{Sampling code (requires augmentation w/ random)}}\\
-\ccode{esl\_dirichlet\_Sample()}            & Sample a probability vector from simple Dirichlet.\\
+\ccode{esl\_dirichlet\_Sample()}            & Sample a probability vector from a Dirichlet.\\
+\ccode{esl\_dirichlet\_SampleUniform()}     & Sample a probability vector uniformly.\\
 \ccode{esl\_dirichlet\_SampleBeta()}        & Sample from Beta$(\theta_1, \theta_2$).\\
 \ccode{esl\_dirichlet\_SampleGamma()}       & Sample from $\Gamma(a)$.\\
    \multicolumn{2}{c}{\textbf{Input from file (requires augmentation w/ fileparser)}}\\
