Added exponential, weibull, hyperexp, mixgev modules.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@65 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_vectorops.tex
+++ b/esl_vectorops.tex
@@ -25,6 +25,8 @@ doubles; \ccode{esl\_vec\_ISet()} is for integers.
 \ccode{esl\_vec\_\{D,F,I\}Min()}         & Return value of minimum element in vector.\\
 \ccode{esl\_vec\_\{D,F,I\}ArgMax()}      & Return index of maximum element in vector.\\
 \ccode{esl\_vec\_\{D,F,I\}ArgMin()}      & Return index of minimum element in vector.\\
+\ccode{esl\_vec\_\{D,F,I\}SortIncreasing()}& Sort vector from smallest to largest.\\
+\ccode{esl\_vec\_\{D,F,I\}SortDecreasing()}& Sort vector from largest to smallest.\\
     \multicolumn{2}{c}{\textbf{Probability vectors}}\\
 \ccode{esl\_vec\_\{D,F\}Norm()}          & Normalize a probability vector of length n.\\
 \ccode{esl\_vec\_\{D,F\}Log()}           & Convert all items in vec to log probabilities. \\
