A few small tweaks over the weekend; better x=mu checking in weibull code, and added esl_stretchexp.tex.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@69 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_weibull.tex
+++ b/esl_weibull.tex
@@ -1,43 +1,45 @@
 
-The Weibull distribution may be useful for fitting fat-tail empirical
-distributions. 
+The Weibull distribution may be useful for fitting fat-tailed
+empirical distributions.
 
-The Weibull is sometimes called a ``stretched exponential''
-distribution when its shape parameter $\tau$ is less than
-1. ``Stretched exponential'' distributions in the literature are
+In the literature, the Weibull is sometimes called a ``stretched
+exponential'' distribution when its shape parameter $\tau$ is less
+than 1. ``Stretched exponential'' distributions in the literature are
 either Weibull (PDF $ = \lambda \tau (\lambda x)^\tau exp\left[-
 (\lambda x)^tau]$ or a more simple PDF $\propto exp\left[-
-{\lambda(x-\mu}}^tau]$. The latter form does not have an analytical
-expression for the CDF, and it includes Gaussian tails as a special
-case ($\tau = 2$).
+{\lambda(x-\mu}}^tau]$. Easel treats the latter form in the
+\eslmod{stretchexp} module.
 
 \subsection{Weibull densities}
 
 The probability density function (PDF) is:
 
 \begin{equation}
-P(X=x) = \lambda \tau [\lambda(x - \mu)]^{\tau-1} e^{- [\lambda(x-\mu)]^tau}
+P(X=x) = \lambda \tau [\lambda(x - \mu)]^{\tau-1} e^{- [\lambda(x-\mu)]^{\tau}}
 \label{eqn:weibull_pdf}
 \end{equation}
 
 The cumulative distribution function (CDF) is:
 
 \begin{equation}
-P(X \leq x) = 1 - e^{- [\lambda(x-\mu)]^tau}
+P(X \leq x) = 1 - e^{- [\lambda(x-\mu)]^{\tau}}
 \label{eqn:weibull_cdf}
 \end{equation}
 
-Variate $x$ ranges $\mu \leq x < \infty$.
+Variate $x$ ranges $\mu \leq x < \infty$. (However, for $\tau < 1$,
+the PDF goes to infinity at $x=\mu$, so evaluating at $x=\mu$ may not
+be desired.)
 
 Location parameter $\mu$ is unconstrained, $-\infty < \mu <
 \infty$. (Weibull distributions are usually represented without an
 explicit location parameter, implicitly assuming $\mu = 0$.)
 
-Scale parameter $\lambda$ is nonnegative, $\lambda > 0$. (Weibull
-distributions in the literature are also sometimes represented instead
-with a scale parameter $b = \frac{1}{\lambda}$.)
+Scale parameter $\lambda$ is nonnegative, $\lambda >
+0$. (Alteratively, Weibull distributions are also sometimes
+represented with a scale parameter $b = \frac{1}{\lambda}$.)
 
 Shape parameter $\tau$ is nonnegative, $\tau > 0$. 
+
 
 
 
