Several minor tweaks; main change is to make the API of the tail distributions (exponential, weibull, hyperexp, and stretchexp) consistent with each other.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@70 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_random.tex
+++ b/esl_random.tex
@@ -32,8 +32,8 @@ The API consists of the following functions:
    \multicolumn{2}{c}{\textbf{random number sampling}}\\
 \ccode{esl\_random()}                       & Returns uniform deviate $0.0 \leq x < 1.0$.\\
 \ccode{esl\_rnd\_UniformPositive()}         & Returns uniform deviate $0.0 < x < 1.0$.\\
-\ccode{esl\_rnd\_Exponential()}             & Exponentially distributed deviate $0 < x \leq \infty$.\\
 \ccode{esl\_rnd\_Gaussian()}                & Gaussian-distributed deviate.\\
+\ccode{esl\_rnd\_Gamma()}                   & $\Gamma(a)$-distributed deviate.\\
 \ccode{esl\_rnd\_Choose()}                  & Choose a uniformly-distributed random integer.\\
 \ccode{esl\_rnd\_DChoose()}                 & Choose integer according to a probability vector.\\
 \ccode{esl\_rnd\_FChoose()}                 & Choose integer according to a probability vector.\\
